sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:6: error: not found: value m
    m=i
    ^AlgSelectionSort:8: error: not found: value m
      if(getValue(j)<=m){
                      ^AlgSelectionSort:9: error: not found: value m
        m=getValue(j)
        ^AlgSelectionSort:12: error: not found: value m
    swap(m,j);
         ^AlgSelectionSort:12: error: not found: value j
    swap(m,j);
           ^